--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -68,7 +68,7 @@
     display: flex;
     align-items: center;
     padding: 2rem;
-    background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+    background: linear-gradient(135deg, #e799d0, #9e659b); /* Couleur au survol */
     color: white;
     position: relative;
   }
@@ -203,7 +203,7 @@
   }
   
   .save-btn-new {
-    background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+    background:  #4a5568;
     color: white;
     border: none;
     padding: 0.8rem 2rem;
