--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -499,4 +499,22 @@
   .product-link:hover {
     text-decoration: none; /* Assure qu'il n'y a pas de soulignement au survol */
   }
+  .shop-product-card {
+    position: relative;
+    /* autres styles */
+  }
+  
+  .wishlist-icon {
+    font-size: 20px;
+    color: #e74c3c;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    transition: transform 0.2s;
+  }
+  
+  .wishlist-icon:hover {
+    transform: scale(1.2);
+  }
   
