--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -81,12 +81,12 @@
   }
   
   .action-button.edit {
-    background-color:  #d3aac5;
+    background-color:  #db798e;
     color: white;
   }
   
   .action-button.delete {
-    background-color: #f5d9f8;
+    background-color: #f0a0b4;
     color: white;
   }
   
