--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -20,7 +20,7 @@
   }
   
   .add-button {
-    background-color: #e9eaee; /* Couleur de fond personnalisée */
+    background-color: #9795c2; /* Couleur de fond personnalisée */
     color: white;
     padding: 8px 16px;
     border: none;
