--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -2,10 +2,10 @@
 :root {
   --ivory: #FFFFF0;
   --linen: #FAF0E6;
-  --dusty-rose: #DCAE96;
+  --dusty-rose: #dd72ad;
   --sage: #B8C1A1;
   --eucalyptus: #A4B49F;
-  --terracotta: #D08C60;
+  --terracotta:  #D08C60;
   --slate: #6E7F80;
   --charcoal: #2C2F36;
 }
