--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -31,7 +31,7 @@
 .header-subtitle {
   font-size: 1.5rem;
   margin-bottom: 30px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Ombre du texte */
+  color: rgb(255, 255, 255); /* Couleur du texte */
   position: relative;
   z-index: 1;
 }
