--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -244,18 +244,16 @@
   color: #333;
 }
 
-/* Modal Body */
 .modal-body {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   gap: 1rem;
 }
 
-.form-group label {
-  font-weight: 500;
-  color: #555;
-  margin-bottom: 0.3rem;
-  display: block;
+.form-group {
+  flex: 1 1 48%;
+  display: flex;
+  flex-direction: column;
 }
 
 .form-group input,
@@ -302,7 +300,7 @@
 }
 
 .modal-save-btn {
-  background: #4a90e2;
+  background: #9fa6ad;
   color: #fff;
   display: flex;
   align-items: center;
@@ -310,7 +308,7 @@
 }
 
 .modal-save-btn:hover {
-  background: #357ac9;
+  background: #95a0ad;
 }
 
 /* Animation */
